# ORYQON

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/agent-runtime/: README.md  pyproject.toml
apps/agent-runtime/oryqon_agent_runtime/: __init__.py  proposal.py
apps/agent-runtime/tests/: test_boundary.py
apps/control-plane/: README.md  package.json  tsconfig.json
apps/control-plane/db/: README.md  test-rls.sh
apps/control-plane/db/migrations/: 0001_tenant_rls.sql  0002_domain_schema.sql
apps/control-plane/db/tests/: rls_cross_tenant.sql  rls_domain.sql
apps/control-plane/policies/: oryqon.rego  oryqon_test.rego
apps/control-plane/src/: index.ts
apps/control-plane/src/agents/: admission.ts  agent-registry.ts  agent-run.ts
apps/control-plane/src/analytics/: metrics-store.ts  rollup.ts
apps/control-plane/src/approvals/: approval.ts
apps/control-plane/src/auth/: step-up.ts
apps/control-plane/test/: agent-admission.test.ts  agent-registry.test.ts  agent-run.test.ts  approval.test.ts  audit-export.test.ts  campaign.test.ts  connector-dispatch.test.ts  connector-registry.test.ts  evidence.test.ts  idempotency.test.ts  metrics-store.test.ts  policy.test.ts  product-passport.test.ts  rbac.test.ts  readiness.test.ts  rollup.test.ts  settings.test.ts  step-up.test.ts  tenant.test.ts  tool-broker.test.ts  url-guard.test.ts
apps/web/: next.config.ts  package.json  postcss.config.mjs
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: ARCHITECTURE.md  DESIGN.md
scripts/: check-branding.mjs
(+52 files in other folders)
